--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
 }
 
 html,body{
-	height:95vh;
+	height:100vh;
 
 }
 
@@ -44,9 +44,17 @@ p{
 #introimg{
 	object-fit: cover;
 	align-self: center;
+	margin-top: 50px;
   	border-radius: 50%;
   	width: 300px;
   	height: 300px;
+}
+
+#description{
+	margin-top: 5vh;
+	font-family:"Palatino Linotype", "Book Antiqua", Palatino, serif;
+	font-weight:lighter;
+	font-style:italic;
 }
 
 
@@ -56,10 +64,11 @@ ul{
 }
 
 li{
-	padding-top: 0.5vh;
+	padding-top:0.75vh;
 	display:inline-block;
 	margin-left: 70px;
 	position:relative;
+	padding-bottom: 1vh;
 
 }
 
@@ -69,7 +78,6 @@ ul>li>a{
 	font-variant: small-caps;
 	font-weight:bold;
 	font-size:20px; 
-
 }
 .button.active{
 	background:red;
@@ -80,7 +88,7 @@ a::before{
 	transition: all ease-in-out 250ms;
 	content:"";
 	display:block;
-	height:4px;
+	height:6px;
 	width:100%;
 	background-color: #444;
 	position:absolute;
@@ -102,7 +110,7 @@ a:hover{
 
 .tabPanel{
 	width:88%;
-	height:80vh;
+	height:87vh;
 	background:rgb(255,248,220);
 	padding:40px;
 	text-align:center;
