--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,500,600,700,900);
 
+
+/************************************Home Page*****************/
 #h1Name{
 
 	font-size:70px;
@@ -72,7 +74,7 @@ li{
 
 }
 
-ul>li>a{
+.HoverButton>ul>li>a{
 	color:#444;
 	text-decoration: none;
 	font-variant: small-caps;
@@ -84,7 +86,7 @@ ul>li>a{
 	color:white;
 }
 
-a::before{
+.HoverButton>ul>li>a::before{
 	transition: all ease-in-out 250ms;
 	content:"";
 	display:block;
@@ -92,16 +94,16 @@ a::before{
 	width:100%;
 	background-color: #444;
 	position:absolute;
-	top:0;
+	top:2px;
 	width:0%;
 
 }
 
-a:hover::before{
+.HoverButton>ul>li>a:hover::before{
 	width:100%;
 }
 
-a:hover{
+.HoverButton>ul>li>a:hover{
 	display: block;
 	height:6%;
 	color:#000;
@@ -124,3 +126,23 @@ footer{
 	margin-top: 10px;
 	text-align:center;
 }
+
+
+
+/**************************** About Me **************************/
+
+.tabPanel>ul>li>p{
+	font-size:20px;
+}
+
+.tabPanel>table td{
+	text-align: left;
+	font-size:20px;
+	padding-right: 100px;
+	color:black;
+}
+
+.tabPanel>table{
+	float:right;
+}
+
