--- a/main.css
+++ b/main.css
@@ -9,9 +9,11 @@
 	background-color: white;
 }
 
+.tabContainer{
+
+}
 html,body{
-	min-height:100%;
-	height:100%;
+	height:70vh;
 	background:rgb(255,160,122)!important;
 }
 
@@ -111,7 +113,7 @@ li{
 	width:90%;
 	min-height:85vh;
 	background:rgb(255,248,220);
-	padding:40px;
+	padding:2vh;
 	text-align:center;
 	margin:auto;
 	color:white;
@@ -119,9 +121,8 @@ li{
 	align-items:baseline;
 }
 
-
 footer{
-	margin-top: 15px;
+	margin-top: 5px;
 	text-align:center;
 	float:center;
 }
@@ -133,7 +134,7 @@ footer{
 #JobNotice{
 	font-size:2.5vh;
 	text-align: left;
-	margin-top: 5%;
+	margin-top: 2%;
 	filter:brightness(80%);
 	color:rgb(255,160,122);
 }
@@ -150,11 +151,13 @@ footer{
 
 #ProfPic{
 	float:left;
-	height:60vh;
-	width:45vh;
-	align-items: center;
-	margin:3.5vh;
-	margin-right: 7.5vh;
+	max-height:90%;
+	height:55vh;
+	width:25%;
+	margin-left:3.5vh;
+	margin-right:3.5vh;
+	margin-top: 7%;
+
 }
 
 .buttonContainer{
@@ -168,5 +171,16 @@ footer{
 	margin-right: 5vh;
 	align-items: left;
 	float:center;
-	margin-bottom: 5vh;
+}
+
+.FunFactImage{
+	max-height: 100%;
+	max-width: 32%;
+}
+
+.FunFactBox{
+	padding-top: 5vh;
+	align-self: right;
+	max-width: 65%;
+	float:left;
 }
