--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 
 /************************************Home Page*****************/
 *{
-	line-height: 1.15;
+	line-height: 1.4;
 }
 
 
@@ -35,7 +35,6 @@ body{
 	font-size: 1em;
 	color:black;
 	align-items: center;
-	/*background:rgb(255,160,122);*/
 }
 
 p{
@@ -60,7 +59,6 @@ p{
 	font-style:italic;
 }
 
-
 ul{
 	text-align: left;
 	margin-right: 6%;
@@ -72,7 +70,6 @@ li{
 	display:inline-block;
 	margin-left: 70px;
 	position:relative;
-
 }
 
 .HoverButton{
@@ -119,7 +116,7 @@ li{
 	width:90%;
 	min-height:90vh;
 	background:rgb(255,248,220);
-	padding:2vh;
+	padding:5vh;
 	text-align:center;
 	margin:auto;
 	color:white;
@@ -191,6 +188,8 @@ footer{
 	max-width: 15%;
 	margin-right: 2%;
 	align-content: center;
+	line-height:1.5;
+
 }
 
 div.FunFactBox.row{
@@ -204,6 +203,7 @@ div.FunFactBox.row{
 	margin-top: auto;
 	align-content: center;
 	color:white !important;
+	line-height:1.5;
 }
 
 div.col-lg-3{
@@ -303,11 +303,6 @@ div.col-lg-3{
 	float:left;
 }
 
-#ExperiencePanel{
-	padding-left: 5%;
-	padding-right: 5%;
-}
-
 .ResumeTopic{
 	color:black;
 	text-align: left;
@@ -336,10 +331,15 @@ div.col-lg-3{
 }
 
 .ResumeSection p{
+	margin-bottom: 0px;
 	color:gray;
 	font-size: 1.5vh;
 	text-align: left;
 	margin-left: 0px;
 	float:left;
+}
+
+.ResumeSection{
+	padding-bottom: 1rem;
 }
 
