Fun Facts formatting

--- a/main.css
+++ b/main.css
@@ -2,11 +2,6 @@
 
 
 /************************************Home Page*****************/
-*{
-	line-height: 1.4;
-}
-
-
 #h1Name{
 	font-size:70px;
 	text-align:center;
@@ -206,15 +201,17 @@ div.FunFactBox.row{
 	line-height:1.5;
 }
 
-div.col-lg-3{
-	flex:33%;
-	max-width: 25%;
+img.img-responsive{
+	height:95%
+	width:100%;
+
 }
 
 .FunFactBox.row{
 	padding-top: 2vh;
 	text-align: left;
 }
+
 .hovereffect {
 	width:100%;
 	height:100%;
@@ -240,7 +237,6 @@ div.col-lg-3{
 
 .hovereffect img {
 	display:block;
-	position:relative;
 	-webkit-transition:all .4s linear;
 	transition:all .4s linear;
 }
@@ -250,7 +246,7 @@ div.col-lg-3{
 	color:#fff;
 	text-align:center;
 	position:relative;
-	font-size:17px;
+	font-size:10px;
 	background:rgba(0,0,0,0.6);
 	-webkit-transform:translatey(-100px);
 	-ms-transform:translatey(-100px);
@@ -295,6 +291,8 @@ div.col-lg-3{
 	transform:translatey(0);
 }
 
+/*                               Resume Panel             */
+
 
 .ResumeCol{
 	width:33%;
@@ -308,7 +306,6 @@ div.col-lg-3{
 	text-align: left;
 	font-size:2vh;
 	overflow: hidden;
-	white-space:nonwrap;
 	float:left;
 	font-weight: 500;
 }
@@ -337,6 +334,7 @@ div.col-lg-3{
 	text-align: left;
 	margin-left: 0px;
 	float:left;
+	line-height: 1;
 }
 
 .ResumeSection{
