--- a/main.css
+++ b/main.css
@@ -128,7 +128,6 @@ footer{
 
 
 /**************************** About Me **************************/
-
 #JobNotice{
 	font-size:2.5vh;
 	text-align: left;
@@ -157,7 +156,6 @@ footer{
 	margin-right:3.5vh;
 	margin-top: 5vh;
 	clear:both;
-
 }
 
 .buttonContainer{
@@ -176,8 +174,11 @@ footer{
 
 /*/////////////////////////Fun Facts Stuff//////////////////////*/
 
+#FunFactH1{
+	padding-right: 30%;
+	text-align: center;
+}
 
-/* Images */
 .FunFactImage{
 	max-height: 100%;
 	max-width: 15%;
