--- a/main.css
+++ b/main.css
@@ -196,6 +196,8 @@ div.FunFactBox.row{
 }
 
 .hoverText{
+	height:33%;
+	font-size:3vh;
 	margin-top: auto;
 	align-content: center;
 	color:white !important;
@@ -308,7 +310,7 @@ img.img-responsive{
 .ResumeTopic{
 	color:black;
 	text-align: left;
-	font-size:2.5vh;
+	font-size:2vh;
 	overflow: hidden;
 	float:left;
 	font-weight: 500;
@@ -320,14 +322,14 @@ img.img-responsive{
 	font-style: bold;
 	color:black;
 	text-align: left;
-	font-size:2.5vh;
+	font-size:2vh;
 	overflow: hidden;
 	white-space:nonwrap;
 	float:right;
 }	
 
 .description{
-	font-size:2vh;
+	font-size:1.5vh;
 	color:black;
 	display:inline-block;
 	text-align: left;
@@ -337,7 +339,7 @@ img.img-responsive{
 .ResumeSection p{
 	margin-bottom: 0px;
 	color:gray;
-	font-size: 2vh;
+	font-size: 1.5vh;
 	text-align: left;
 	margin-left: 0px;
 	line-height: 1.5;
