Skill bar animation trial, need more work experiences+ one more module for resume slide

--- a/main.css
+++ b/main.css
@@ -197,11 +197,10 @@ div.FunFactBox.row{
 
 .hoverText{
 	height:33%;
-	font-size:3vh;
-	margin-top: auto;
+	font-size:3.5vh;
 	align-content: center;
 	color:white !important;
-	line-height:1.5;
+	line-height:1.25;
 }
 
 img.img-responsive{
@@ -310,7 +309,7 @@ img.img-responsive{
 .ResumeTopic{
 	color:black;
 	text-align: left;
-	font-size:2vh;
+	font-size:2.5vh;
 	overflow: hidden;
 	float:left;
 	font-weight: 500;
@@ -322,14 +321,14 @@ img.img-responsive{
 	font-style: bold;
 	color:black;
 	text-align: left;
-	font-size:2vh;
+	font-size:2.5vh;
 	overflow: hidden;
 	white-space:nonwrap;
 	float:right;
 }	
 
 .description{
-	font-size:1.5vh;
+	font-size:2.5vh;
 	color:black;
 	display:inline-block;
 	text-align: left;
@@ -339,7 +338,7 @@ img.img-responsive{
 .ResumeSection p{
 	margin-bottom: 0px;
 	color:gray;
-	font-size: 1.5vh;
+	font-size: 2vh;
 	text-align: left;
 	margin-left: 0px;
 	line-height: 1.5;
@@ -351,4 +350,79 @@ img.img-responsive{
 
 .ResumeSection .buttonContainer{
 	float:right;
+}
+
+
+/*///////////////////////////////////////////Skill Bar/////////////////////////*/
+.skillbar {
+	position:relative;
+	display:block;
+	margin-bottom:15px;
+	width:100%;
+	background:#eee;
+	height:35px;
+	border-radius:3px;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	-webkit-transition:0.4s linear;
+	-moz-transition:0.4s linear;
+	-ms-transition:0.4s linear;
+	-o-transition:0.4s linear;
+	transition:0.4s linear;
+	-webkit-transition-property:width, background-color;
+	-moz-transition-property:width, background-color;
+	-ms-transition-property:width, background-color;
+	-o-transition-property:width, background-color;
+	transition-property:width, background-color;
+}
+
+.skillbar-title {
+	position:absolute;
+	top:0;
+	left:0;
+	width:110px;
+	font-weight:bold;
+	font-size:13px;
+	color:#ffffff;
+	background:#6adcfa;
+	-webkit-border-top-left-radius:3px;
+	-webkit-border-bottom-left-radius:4px;
+	-moz-border-radius-topleft:3px;
+	-moz-border-radius-bottomleft:3px;
+	border-top-left-radius:3px;
+	border-bottom-left-radius:3px;
+}
+
+.skillbar-title span {
+	display:block;
+	background:rgba(0, 0, 0, 0.1);
+	padding:0 20px;
+	height:35px;
+	line-height:35px;
+	-webkit-border-top-left-radius:3px;
+	-webkit-border-bottom-left-radius:3px;
+	-moz-border-radius-topleft:3px;
+	-moz-border-radius-bottomleft:3px;
+	border-top-left-radius:3px;
+	border-bottom-left-radius:3px;
+}
+
+.skillbar-bar {
+	height:35px;
+	width:0px;
+	background:#6adcfa;
+	border-radius:3px;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+}
+
+.skill-bar-percent {
+	position:absolute;
+	right:10px;
+	top:0;
+	font-size:11px;
+	height:35px;
+	line-height:35px;
+	color:#ffffff;
+	color:rgba(0, 0, 0, 0.4);
 }
