Finished work experience and education

--- a/main.css
+++ b/main.css
@@ -320,7 +320,7 @@ img.img-responsive{
 	font-weight: 500;
 	font-style: bold;
 	color:black;
-	text-align: left;
+	text-align: right;
 	font-size:2.5vh;
 	overflow: hidden;
 	white-space:nonwrap;
