--- a/main.css
+++ b/main.css
@@ -1,6 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400,500,600,700,900);
-
-
 /************************************Home Page*****************/
 #h1Name{
 	font-size:70px;
@@ -9,26 +6,26 @@
 	background-color: white;
 }
 
-.tabContainer{
-
+html{
+	min-height: 100%;
 }
 html,body{
-	height:70vh;
-	background:rgb(255,160,122)!important;
+	background-image: linear-gradient(to bottom right, #de784c,#ffbb9d);
+
 }
 
 h1{
 	margin:0px !important;
 	font-size:50px;
 	text-align: center;
-	color:rgb(255,160,122)!important;
+	color:#be5427!important;
 }
 
 body{	
 	font-family:'Oxygen', Helvetica, sans-serif;
 	font-weight: 400;
 	font-size: 1em;
-	color:black;
+	color:rgb(0,0,0.5);
 	align-items: center;
 }
 
@@ -38,13 +35,22 @@ p{
 	font-weight: bold;
 }
 
+#introTexts{
+	margin-top:25%;
+	float:right;
+	text-align: center;
+	margin-right: 10%;
+}
+#introTexts p{
+	color:#de784c;
+}
+
 #introimg{
+	margin-top:10%;
 	object-fit: cover;
-	align-self: center;
-	margin-top: 50px;
-  	border-radius: 50%;
-  	width: 300px;
-  	height: 300px;
+	float:left;
+  	width: 80%;
+  	height:80%;
 }
 
 #description{
@@ -56,6 +62,8 @@ p{
 
 ul{
 	text-align: left;
+	padding-left: 0px;
+	margin-left: 5%;
 	margin-right: 6%;
 	margin-bottom: 0.5rem !important;
 }
@@ -63,12 +71,12 @@ ul{
 li{
 	padding-top:0.75vh;
 	display:inline-block;
-	margin-left: 70px;
+	margin-right: 70px;
 	position:relative;
 }
 
 .HoverButton{
-	color:#444;
+	color:rgb(255,255,230,0.9);
 	text-decoration: none;
 	font-variant: small-caps;
 	font-weight:bold;
@@ -106,12 +114,11 @@ li{
 	cursor:pointer;
 }
 
-
 #HomePanel,#AboutMePanel,#ResumePanel{
 	width:90%;
-	min-height:90vh;
+	height:90vh;
 	background:rgb(255,248,220);
-	padding:5vh;
+	padding:2vh;
 	text-align:center;
 	margin:auto;
 	color:white;
@@ -149,9 +156,8 @@ footer{
 
 #ProfPic{
 	float:left;
-	max-height:90%;
-	height:55vh;
-	width:40vh;
+	height:50%;
+	width:20%;
 	margin-left:3.5vh;
 	margin-right:3.5vh;
 	margin-top: 5vh;
@@ -180,7 +186,7 @@ footer{
 }
 
 .FunFactImage{
-	max-height: 100%;
+	max-height: 80%;
 	max-width: 15%;
 	margin-right: 2%;
 	align-content: center;
@@ -189,9 +195,8 @@ footer{
 }
 
 div.FunFactBox.row{
-	min-height: 30vh;
-	padding-left: 3.5vh;
-	margin-right: 3.5vh;
+	width:90%;
+	padding-left: 20%;
 	margin-bottom: 0.2%;
 }
 
